2011-10-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/jfs.c (grub_jfs_blkno): Use more appropriate types.
	(grub_jfs_blkno): Fix incorrect shift.
	(grub_jfs_read_file): Use more appropriate types.

2011-10-24  Vladimir Serbinenko  <phcoder@gmail.com>

	Support triple indirect on minix2 and minix3.

	* grub-core/fs/minix.c (grub_minix_inode) [MODE_MINIX2 || MODE_MINIX3]:
	Declare triple_indir_zone.
	(grub_minix_get_file_block) [MODE_MINIX2 || MODE_MINIX3]: Handle triple
	indirect.

2011-10-24  Vladimir Serbinenko  <phcoder@gmail.com>

	Minix FS fixes.

	* grub-core/fs/minix.c (GRUB_MINIX_INODE_SIZE): Size is always 32-bit.
	(grub_minix_inode) [!MODE_MINIX2 && !MODE_MINIX3]: Make size 32-bit.
	Rename ctime to mtime. All users updated.
	(grub_minix_get_file_block): Fix types and double indirect computations.

2011-10-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/fat.c (grub_fat_label) [MODE_EXFAT]: Set *label to 0
	if no label is found.
	(grub_fat_iterate_dir): Fix file size type.
	(grub_fat_iterate_dir): Likewise.

2011-10-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/reed_solomon.c (gf_invert): Declare as const and
	save some space.
	* include/grub/offsets.h (GRUB_KERNEL_I386_PC_RAW_SIZE): Decrease.
	(GRUB_KERNEL_I386_PC_NO_REED_SOLOMON_PART): Likewise.

2011-10-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/import_gcry.py: Automatically fix camellia.c and camellia.h.

2011-10-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/import_gcry.py: Accept space between # and include.

2011-10-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/setjmp.S [__ia64__]: Include ./ia64/longjmp.S.

2011-10-23  Vladimir Serbinenko  <phcoder@gmail.com>

	Fine grainely disable warnings on lexer. Remove Wno-error on it.

	* grub-core/Makefile.core.def (normal): Remove -Wno-error.
	* grub-core/script/lexer.c: Declare yytext_ptr to avoid having
	yylex_strncpy.
	* grub-core/script/yylex.l: Add fine-grained #pragma.
